@@ -1,17 +1,19 @@
 package org.yamcs.http.api;
 
 import java.io.IOException;
+import java.nio.file.Path;
+import java.nio.file.PathMatcher;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import org.yamcs.YamcsServer;
 import org.yamcs.api.HttpBody;
 import org.yamcs.api.Observer;
 import org.yamcs.buckets.Bucket;
+import org.yamcs.buckets.Bucket.AccessRuleType;
 import org.yamcs.buckets.BucketProperties;
 import org.yamcs.buckets.FileSystemBucket;
 import org.yamcs.buckets.ObjectProperties;
@@ -47,21 +49,19 @@ import com.google.protobuf.Empty;
 public class BucketsApi extends AbstractBucketsApi<Context> {
 
     static final Pattern BUCKET_NAME_REGEXP = Pattern.compile("\\w[\\w\\-]+");
-    static final Pattern OBJ_NAME_REGEXP = Pattern.compile("[ \\w\\s\\-\\./]+");
+    static final Pattern OBJ_NAME_REGEXP = Pattern.compile("[ \\w\\s\\-./]+");
 
     @Override
     public void listBuckets(Context ctx, ListBucketsRequest request, Observer<ListBucketsResponse> observer) {
         var bucketManager = YamcsServer.getServer().getBucketManager();
         try {
             List<Bucket> buckets = bucketManager.listBuckets().stream()
-                    .filter(bucket -> mayReadBucket(bucket.getName(), ctx.user))
-                    .collect(Collectors.toList());
+                    .filter(bucket -> mayReadBucket(bucket, ctx.user))
+                    .toList();
 
             var futures = new ArrayList<CompletableFuture<BucketInfo>>();
             for (Bucket bucket : buckets) {
-                futures.add(bucket.getPropertiesAsync().thenApply(props -> {
-                    return toBucketInfo(bucket, props);
-                }));
+                futures.add(bucket.getPropertiesAsync().thenApply(props -> toBucketInfo(bucket, props)));
             }
 
             CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).whenComplete((res, err) -> {
@@ -84,11 +84,12 @@ public class BucketsApi extends AbstractBucketsApi<Context> {
     public void getBucket(Context ctx, GetBucketRequest request, Observer<BucketInfo> observer) {
         String bucketName = request.getBucketName();
 
-        checkReadBucketPrivilege(bucketName, ctx.user);
-        Bucket b = verifyAndGetBucket(bucketName, ctx.user);
-        b.getPropertiesAsync().whenComplete((props, err) -> {
+        Bucket bucket = verifyAndGetBucket(bucketName, ctx.user);
+        checkReadBucketPrivilege(bucket, ctx.user);
+
+        bucket.getPropertiesAsync().whenComplete((props, err) -> {
             if (err == null) {
-                observer.complete(toBucketInfo(b, props));
+                observer.complete(toBucketInfo(bucket, props));
             } else {
                 observer.completeExceptionally(err.getCause());
             }
@@ -137,10 +138,11 @@ public class BucketsApi extends AbstractBucketsApi<Context> {
     @Override
     public void getObjectInfo(Context ctx, GetObjectInfoRequest request, Observer<ObjectInfo> observer) {
         String bucketName = request.getBucketName();
-        checkReadBucketPrivilege(bucketName, ctx.user);
+        Bucket bucket = verifyAndGetBucket(bucketName, ctx.user);
 
         String objName = request.getObjectName();
-        Bucket bucket = verifyAndGetBucket(bucketName, ctx.user);
+        checkReadObjectPrivilege(bucket, objName, ctx.user);
+
         bucket.findObjectAsync(objName).whenComplete((props, err) -> {
             if (err == null) {
                 if (props == null) {
@@ -158,10 +160,10 @@ public class BucketsApi extends AbstractBucketsApi<Context> {
     @Override
     public void getObject(Context ctx, GetObjectRequest request, Observer<HttpBody> observer) {
         String bucketName = request.getBucketName();
-        checkReadBucketPrivilege(bucketName, ctx.user);
+        Bucket bucket = verifyAndGetBucket(bucketName, ctx.user);
 
         String objName = request.getObjectName();
-        Bucket bucket = verifyAndGetBucket(bucketName, ctx.user);
+        checkReadObjectPrivilege(bucket, objName, ctx.user);
 
         bucket.findObjectAsync(objName).whenComplete((props, err) -> {
             if (err == null) {
@@ -195,9 +197,10 @@ public class BucketsApi extends AbstractBucketsApi<Context> {
     @Override
     public void uploadObject(Context ctx, UploadObjectRequest request, Observer<Empty> observer) {
         String bucketName = request.getBucketName();
-
-        checkManageBucketPrivilege(bucketName, ctx.user);
         Bucket bucket = verifyAndGetBucket(bucketName, ctx.user);
+
+        checkManageBucketPrivilege(bucket, ctx.user);
+
         HttpBody body = request.getData();
 
         String objectName;
@@ -209,6 +212,7 @@ public class BucketsApi extends AbstractBucketsApi<Context> {
             throw new BadRequestException("Unknown target object name");
         }
         verifyObjectName(objectName);
+        checkManageObjectPrivilege(bucket, objectName, ctx.user);
 
         String contentType = body.hasContentType() ? body.getContentType() : null;
         byte[] objectData = body.getData().toByteArray();
@@ -226,9 +230,9 @@ public class BucketsApi extends AbstractBucketsApi<Context> {
     @Override
     public void listObjects(Context ctx, ListObjectsRequest request, Observer<ListObjectsResponse> observer) {
         String bucketName = request.getBucketName();
+        Bucket bucket = verifyAndGetBucket(bucketName, ctx.user);
 
-        checkReadBucketPrivilege(bucketName, ctx.user);
-        Bucket b = verifyAndGetBucket(bucketName, ctx.user);
+        checkReadBucketPrivilege(bucket, ctx.user);
 
         String delimiter = request.hasDelimiter() ? request.getDelimiter() : null;
         String prefix = request.hasPrefix() ? request.getPrefix() : null;
@@ -236,11 +240,14 @@ public class BucketsApi extends AbstractBucketsApi<Context> {
         CompletableFuture<List<ObjectProperties>> objectsFuture;
         List<String> prefixes = new ArrayList<>();
         if (delimiter == null) {
-            objectsFuture = b.listObjectsAsync(prefix);
+            objectsFuture = bucket.listObjectsAsync(prefix, props -> mayReadObject(bucket, props.name(), ctx.user));
         } else {
             int prefixLength = prefix != null ? prefix.length() : 0;
-            objectsFuture = b.listObjectsAsync(prefix, props -> {
+            objectsFuture = bucket.listObjectsAsync(prefix, props -> {
                 String name = props.name();
+                if (!mayReadObject(bucket, name, ctx.user)) {
+                    return false;
+                }
                 int idx = name.indexOf(delimiter, prefixLength);
                 if (idx != -1) {
                     String pref = name.substring(0, idx + 1);
@@ -272,10 +279,10 @@ public class BucketsApi extends AbstractBucketsApi<Context> {
     @Override
     public void deleteObject(Context ctx, DeleteObjectRequest request, Observer<Empty> observer) {
         String bucketName = request.getBucketName();
-        checkManageBucketPrivilege(bucketName, ctx.user);
+        Bucket bucket = verifyAndGetBucket(bucketName, ctx.user);
 
         String objName = request.getObjectName();
-        Bucket bucket = verifyAndGetBucket(bucketName, ctx.user);
+        checkManageObjectPrivilege(bucket, objName, ctx.user);
 
         bucket.findObjectAsync(objName).whenComplete((props, err) -> {
             if (err == null) {
@@ -308,8 +315,7 @@ public class BucketsApi extends AbstractBucketsApi<Context> {
                 .setCreated(TimeEncoding.toProtobufTimestamp(props.created()))
                 .setNumObjects(props.numObjects())
                 .setSize(props.size());
-        if (bucket instanceof FileSystemBucket) {
-            FileSystemBucket fsBucket = (FileSystemBucket) bucket;
+        if (bucket instanceof FileSystemBucket fsBucket) {
             bucketb.setDirectory(fsBucket.getBucketRoot().toAbsolutePath().normalize().toString());
         }
         return bucketb.build();
@@ -330,33 +336,78 @@ public class BucketsApi extends AbstractBucketsApi<Context> {
         return infob.build();
     }
 
-    public static void checkReadBucketPrivilege(String bucketName, User user) throws HttpException {
-        if (!mayReadBucket(bucketName, user)) {
-            throw new ForbiddenException("Insufficient privileges to read bucket '" + bucketName + "'");
+    private static void checkReadBucketPrivilege(Bucket bucket, User user) throws HttpException {
+        if (!mayReadBucket(bucket, user)) {
+            throw new ForbiddenException("Insufficient privileges to read bucket '" + bucket.getName() + "'");
         }
     }
 
-    private static boolean mayReadBucket(String bucketName, User user) {
-        if (bucketName.equals(getUserBucketName(user))) {
+    public static void checkReadObjectPrivilege(Bucket bucket, String objName, User user) throws HttpException {
+        if (!mayReadObject(bucket, objName, user)) {
+            throw new ForbiddenException("Insufficient privileges to read object '" + objName + "' in'" + bucket.getName() + "' bucket");
+        }
+    }
+
+    private static boolean mayReadBucket(Bucket bucket, User user) {
+        if (bucket.getName().equals(getUserBucketName(user))) {
             return true; // user can do whatever to its own bucket (but not to increase quota!! currently not possible
             // anyway)
         }
 
-        return user.hasObjectPrivilege(ObjectPrivilegeType.ReadBucket, bucketName)
-                || user.hasObjectPrivilege(ObjectPrivilegeType.ManageBucket, bucketName)
-                || user.hasSystemPrivilege(SystemPrivilege.ManageAnyBucket);
+        return user.hasSystemPrivilege(SystemPrivilege.ManageAnyBucket)
+                || user.hasObjectPrivilege(ObjectPrivilegeType.ReadBucket, bucket.getName())
+                || user.hasObjectPrivilege(ObjectPrivilegeType.ManageBucket, bucket.getName());
     }
 
-    public static void checkManageBucketPrivilege(String bucketName, User user) throws HttpException {
-        if (bucketName.equals(getUserBucketName(user))) {
+    private static boolean mayReadObject(Bucket bucket, String objName, User user) {
+        if (bucket.getName().equals(getUserBucketName(user))) {
+            return true; // user can do whatever to its own bucket (but not to increase quota!! currently not possible
+            // anyway)
+        }
+
+        return mayReadBucket(bucket, user) && hasObjectAccess(AccessRuleType.READ, bucket, objName, user);
+    }
+
+    private static void checkManageBucketPrivilege(Bucket bucket, User user) throws HttpException {
+        if (bucket.getName().equals(getUserBucketName(user))) {
             return; // user can do whatever to its own bucket (but not to increase quota!! currently not possible
                     // anyway)
         }
 
-        if (!user.hasObjectPrivilege(ObjectPrivilegeType.ManageBucket, bucketName)
-                && !user.hasSystemPrivilege(SystemPrivilege.ManageAnyBucket)) {
-            throw new ForbiddenException("Insufficient privileges to manage bucket '" + bucketName + "'");
+        if (!user.hasSystemPrivilege(SystemPrivilege.ManageAnyBucket)
+                && !user.hasObjectPrivilege(ObjectPrivilegeType.ManageBucket, bucket.getName())) {
+            throw new ForbiddenException("Insufficient privileges to manage bucket '" + bucket.getName() + "'");
         }
+    }
+
+    public static void checkManageObjectPrivilege(Bucket bucket, String objName, User user) throws HttpException {
+        checkManageBucketPrivilege(bucket, user);
+
+        if (bucket.getName().equals(getUserBucketName(user))) {
+            return; // user can do whatever to its own bucket (but not to increase quota!! currently not possible
+            // anyway)
+        }
+
+        if (!hasObjectAccess(AccessRuleType.WRITE, bucket, objName, user)) {
+            throw new ForbiddenException("Insufficient privileges to manage object '" + objName + "' in '" + bucket.getName() + "' bucket");
+        }
+    }
+
+    private static boolean hasObjectAccess(AccessRuleType type, Bucket bucket, String objName, User user) {
+        if (!bucket.hasAccessRules(type) || user.hasSystemPrivilege(SystemPrivilege.ManageAnyBucket)) {
+            return true;
+        }
+
+        Path path = Path.of(objName);
+        for (String role : user.getRoles()) {
+            for (PathMatcher pattern : bucket.getAccessRules(type).getOrDefault(role, Collections.emptyList())) {
+                if (pattern.matches(path)) {
+                    return true;
+                }
+            }
+        }
+
+        return false;
     }
 
     static String getUserBucketName(User user) {
